// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsList rendering renders expected elements 1`] = `
<DetailRegion
  id="random-id-label"
  label="Test Label"
>
  <ul
    aria-labelledby="random-id-label"
    className="DetailsList__grid"
    id="random-id"
  >
    <li>
      <div
        className="DetailsList__item"
      >
        site1
      </div>
    </li>
    <li>
      <div
        className="DetailsList__item"
      >
        site2
      </div>
    </li>
  </ul>
</DetailRegion>
`;

exports[`DetailsList rendering renders expected elements when optional properties are set 1`] = `
<DetailRegion
  className="TestClass"
  id="random-id-label"
  infoText="Test info"
  infoTextPlacement="bottom"
  label="Test Label"
>
  <ul
    aria-labelledby="random-id-label"
    className="DetailsList__grid"
    id="random-id"
  >
    <li>
      <div
        className="DetailsList__item"
      >
        site1
      </div>
    </li>
    <li>
      <div
        className="DetailsList__item"
      >
        site2
      </div>
    </li>
  </ul>
</DetailRegion>
`;
